Schemas: implemented Intern (#553)
Schemas: added contexts JSON Schema and tests (#627)
Schemas: added unstructured events JSON Schema and tests (#741)
Schemas: added payload_data JSON Schema and tests (#760)
Schemas: added ad_* JSON Schema and tests (#554)
Schemas: added link_click JSON Schema and tests (#601)
Schemas: added screen_view JSON Schema and tests (#590)
Schemas: added self-describing JSON Schema instance and schema (#736)
Scala Hadoop Shred: added. Version 0.1.0                                                - TODO
EmrEtlRunner: bumped to 0.8.0
EmrEtlRunner: updated S3DistCp steps to use new S3DistCpStep from Elasticity (#629)
EmrEtlRunner: added ability to start Lingual in EmrEtlRunner (#623)
EmrEtlRunner: added ability to start HBase in EmrEtlRunner (#622)
EmrEtlRunner: improved load performance by switching ETL to write out to HDFS (#278)
EmrEtlRunner: now invoking Scala Hadoop Shredder after main job (#644)
EmrEtlRunner: added --skip shred option (#659)
StorageLoader: bumped to 0.3.0
StorageLoader: added ACCEPTINVCHARS to StorageLoader (#411)
StorageLoader: wrote JSON Path files for ad_* events (#642)
StorageLoader: wrote JSON Path file for link_click (#599)
StorageLoader: wrote JSON Path file for screen_view (#643)
StorageLoader: added hosted_assets setting for StorageLoader (#606)
StorageLoader: added ability to load custom tables using JSON Paths (#607)              - TODO
StorageLoader: added --skip shred option (#660)                                         - TODO
Redshift: added Redshift DDL for ad_* events (#639)
Redshift: added Redshift DDL for link_click events (#600)
Redshift: added Redshift DDL for screen_view events (#640)
Looker Analytics: improved existing LookML definitions to 0.2.0 (#697)
Looker Analytics: wrote LookML for ad_* events (#605)
Looker Analytics: wrote LookML for screen_view events (#637)
Looker Analytics: wrote LookML for link_click events (#636)

Version 0.9.3 (2014-05-21)
--------------------------